<resources>
    <string name="backup_wallet">Backup funds</string>
    <string name="upgrade_wallet">Upgrade</string>
    <string name="current_price_btc">1 BTC = %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="all_accounts">All Wallets</string>
    <string name="please_wait">Please wait</string>
    <string name="send_bitcoin">Send</string>
    <string name="receive_bitcoin">Request</string>
    <string name="overview">Transactions</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="polite_no">No thanks</string>
    <string name="done">Done</string>
    <string name="YESTERDAY">Yesterday</string>
    <string name="SENT">Sent</string>
    <string name="sending">Sending</string>
    <string name="RECEIVED">Received</string>
    <string name="receiving">Receiving</string>
    <string name="MOVED">Transferred</string>
    <string name="paid">Paid</string>
    <string name="payment_request">Payment Request</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="options_id">Wallet ID</string>
    <string name="preferences_about_title">About Us</string>
    <string name="ask_you_sure_unpair">Are you sure you want to unpair your device?</string>
    <string name="select_currency">Select Currency</string>
    <string name="options_currency">Local Currency</string>
    <string name="options_units">Bitcoin Unit</string>
    <string name="options_tos">Terms of Service</string>
    <string name="options_privacy">Privacy Policy</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_mobile">Invalid mobile phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_too_short">Please enter more than 3 characters</string>
    <string name="invalid_guid">Invalid Wallet ID</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="change_password_new_matches_current">You can\'t use your current password as your new password</string>
    <string name="no_private_key">Cannot produce private key.</string>
    <string name="pin_4_strikes">4 failed PIN attempts. Please provide password.</string>
    <string name="pin_4_strikes_password_accepted">Password accepted. Please define new PIN.</string>
    <string name="bip38_password_entry">Please enter private key password</string>
    <string name="pin_entry">Enter PIN</string>
    <string name="password_entry">Please enter password</string>
    <string name="zero_pin">0000 is an invalid PIN. Please try again.</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>
    <string name="pin_mismatch_error">PINs do not match</string>
    <string name="create_pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_pin_failed">PIN creation failed. Please pair device again.</string>
    <string name="change_pin_new_matches_current">You can\'t use your current PIN as your new PIN</string>
    <string name="pairing_failed">Pairing failed. Please try again.</string>
    <string name="account_locked_title">Account locked</string>
    <string name="account_locked_message">Your account has been locked temporarily as a precaution. Please check your email for more information and try again later.</string>
    <string name="check_connectivity_exit">Blockchain Wallet cannot obtain an Internet connection. Please check the connectivity on your device and try again.</string>
    <string name="double_encryption_password_error">Double encrypt password error. Please try again.</string>
    <string name="command2">Scan pairing code</string>
    <string name="command3">I can\'t access my camera</string>
    <string name="create_a_wallet">Create a wallet</string>
    <string name="log_in">Log in</string>
    <string name="pair_your_wallet">Pair Your Wallet</string>
    <string name="manual_pairing">Manual Pairing</string>
    <string name="pair_wallet_step_1">Log in to your Blockchain Wallet via your PC or Mac at %1$s.</string>
    <string name="pair_wallet_step_2">Go to Settings / Wallet Information.</string>
    <string name="pair_wallet_step_3">Click Show Pairing Code to reveal a QR Code, a square black &amp; white barcode. Scan the code with your camera.</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="default_wallet_name">My Bitcoin Wallet</string>
    <string name="recover_funds">Recover Funds</string>
    <string name="recover_funds_warning_message">You should always pair or login if you have access to your Wallet ID and password. Recovering your funds will create a new Wallet ID. Would you like to continue?</string>
    <string name="recover_funds_instructions">Enter your 12 backup words with spaces to recover your funds &amp; transactions</string>
    <string name="recovery_passphrase">Backup phrase</string>
    <string name="invalid_recovery_phrase">Invalid backup phrase. Please try again</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="restore_failed">Restoring wallet failed. Please try again</string>
    <string name="restoring_wallet">Restoring wallet.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="agree_terms_of_service">By creating a new wallet you agree to the</string>
    <string name="blockchain_tos">Blockchain Terms of Service</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="new_wallet">New Wallet</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_medium">Regular</string>
    <string name="strength_strong">Strong</string>
    <string name="strength_normal">Normal</string>
    <string name="CONTINUE">Continue</string>
    <string name="SEND">SEND</string>
    <string name="total">Total</string>
    <string name="max_available">Use total available minus fee:</string>
    <string name="invalid_bitcoin_address">Invalid Bitcoin address</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="enter_double_encryption_pw">Please enter double encryption password</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us</string>
    <string name="licenses">Licenses</string>
    <string name="email_chooser">Send e-mail…</string>
    <string name="about">Blockchain Wallet %1$s\n©%2$s Blockchain Luxembourg S.A.\nAll rights reserved.</string>
    <string name="merchant_download">Free Merchant app</string>
    <string name="password_or_wipe">Enter using your password or forget this wallet</string>
    <string name="use_password">Use password</string>
    <string name="wipe_wallet">Forget wallet</string>
    <string name="support_leaving_app_warning">This will leave the app and take you to your browser. Continue?</string>
    <string name="weak_password">The selected password is too weak to secure your funds. We strongly suggest you select a different one. Would you like to define a new password?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="confirm_details">Confirm Payment</string>
    <string name="fee">Fee</string>
    <string name="exit_confirm">Press back button again to exit</string>
    <string name="label_address">Your address has been imported successfully. Optionally assign a friendly display name to this address.</string>
    <string name="label_address2">Your address has been created successfully. Optionally assign a friendly display name to this address.</string>
    <string name="bip38_error">Invalid private key password</string>
    <string name="privkey_error">Unrecognized private key format</string>
    <string name="hd_error">HD wallet error</string>
    <string name="scan_not_recognized">Scan cannot be decoded</string>
    <string name="imported_addresses">Imported Addresses</string>
    <string name="remote_save_ok">Successfully saved</string>
    <string name="remote_save_ko">Save unsuccessful</string>
    <string name="unpair_wallet">Unpair Wallet</string>
    <string name="unpair">UNPAIR</string>
    <string name="ok_cap">OK</string>
    <string name="change_pin_code">Change PIN</string>
    <string name="enter_current_pin">Please enter current PIN.</string>
    <string name="addresses_bitcoin">Bitcoin Addresses</string>
    <string name="addresses_bitcoin_cash">Bitcoin Cash Addresses</string>
    <string name="drawer_addresses">Addresses</string>
    <string name="create_new">Create New</string>
    <string name="import_address">Import Address</string>
    <string name="wallets">Wallets</string>
    <string name="save_name">Save name</string>
    <string name="receive_address_to_clipboard">Copy this receive address to the clipboard? If so, be advised that other applications may be able to look at this information.</string>
    <string name="receive_address_to_share">Share this receive address for sending? If so, be advised that other applications may be able to look at this information.</string>
    <string name="guid_to_clipboard">Copy your Wallet ID to the clipboard? If so, be advised that other applications may be able to look at this information.</string>
    <string name="ssl_pinning_invalid">Secure connection to the host has failed. This might indicate malicious activity. Please verify your network connection and device before continuing.</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="received_bitcoin">Received Bitcoin</string>
    <string name="received_ethereum">Received Ether</string>
    <string name="received_bitcoin_cash">Received Bitcoin Cash</string>
    <string-array name="mnemonic_word_requests">
        <item>first word</item>
        <item>second word</item>
        <item>third word</item>
        <item>fourth word</item>
        <item>fifth word</item>
        <item>sixth word</item>
        <item>seventh word</item>
        <item>eighth word</item>
        <item>ninth word</item>
        <item>tenth word</item>
        <item>eleventh word</item>
        <item>twelfth word</item>
    </string-array>
    <string name="verification_failed">Verification Failed</string>
    <string name="send_payment">Send Payment</string>
    <string name="share">Share Receive Address</string>
    <string name="CLOSE">CLOSE</string>
    <string name="logout">Logout</string>
    <string name="pairing_code_log_in">Log in to Web Wallet</string>
    <string name="contacts_title">Contacts</string>
    <string name="ether">Ether</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="bitcoin_cash" translatable="false">Bitcoin Cash</string>
    <string name="buy_sell">Buy &amp; Sell</string>
    <string name="buy_sell_welcome_message">Create an account now to start buying cryptocurrency in minutes.</string>
    <string name="buy_sell_get_started">Get started</string>
    <string name="buy_sell_unverified_email_title">Verify Your Email</string>
    <string name="buy_sell_unverified_email_verify_message1">We sent a verification link to</string>
    <string name="buy_sell_unverified_email_verify_message2">Click it and return here to continue with your transaction.</string>
    <string name="buy_sell_unverified_email_verify_open_email">Open Email</string>
    <string name="buy_sell_unverified_email_verify_agree_coinify_terms">Agree to Coinify <a href="ignored">terms and conditions</a></string>
    <string name="buy_sell_invalid_country_title">Buying &amp; Selling Bitcoin is not yet available in your country</string>
    <string name="buy_sell_invalid_country_message">We will be rolling out more countries soon.</string>
</resources>