<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_navy_dark">

    <TextView
        android:id="@+id/textview_selected_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/action_bar_height"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:drawableLeft="@drawable/vector_bitcoin"
        tools:drawableRight="@drawable/vector_expand_more"
        tools:text="Selected Currency" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_coin_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textview_bitcoin"
                style="@style/CryptoCurrencySelectorTextView"
                android:text="@string/bitcoin"
                tools:drawableLeft="@drawable/vector_bitcoin"
                tools:drawableRight="@drawable/vector_expand_more" />

            <TextView
                android:id="@+id/textview_ethereum"
                style="@style/CryptoCurrencySelectorTextView"
                android:text="@string/ether"
                tools:drawableLeft="@drawable/vector_eth" />

            <TextView
                android:id="@+id/textview_bitcoin_cash"
                style="@style/CryptoCurrencySelectorTextView"
                android:text="@string/bitcoin_cash"
                tools:drawableLeft="@drawable/vector_bitcoin_cash" />

            <TextView
                android:id="@+id/textview_lumens"
                style="@style/CryptoCurrencySelectorTextView"
                android:text="@string/lumens"
                tools:drawableLeft="@drawable/vector_stellar_rocket" />

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
