<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/verifyEmailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center_horizontal"
        android:text="@string/buy_sell_unverified_email_title"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/verifiedEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:textColor="@color/primary_gray_dark"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmailTitle"
        tools:text="verified@email.com"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/verifyEmailMessage1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/buy_sell_unverified_email_verify_message1"
        android:textColor="@color/primary_gray_dark"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifiedEmailAddress"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/verifyEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center_horizontal"
        android:textColor="@color/primary_gray_dark"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmailMessage1"
        tools:text="unverified@email.com"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/verifyEmailMessage2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/buy_sell_unverified_email_verify_message2"
        android:textColor="@color/primary_gray_dark"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmailAddress"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/verifyEmailOpenEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/buy_sell_unverified_email_verify_open_email"
        android:textAllCaps="true"
        android:textColor="@color/primary_blue_accent"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmailMessage2"
        tools:visibility="visible" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/verifyEmailTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:autoLink="web"
        android:linksClickable="true"
        app:layout_constraintBottom_toTopOf="@+id/verifyIdentificationButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/verifyEmailTermsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:text="@string/buy_sell_unverified_email_verify_agree_coinify_terms"
        app:layout_constraintBottom_toBottomOf="@+id/verifyEmailTerms"
        app:layout_constraintStart_toEndOf="@+id/verifyEmailTerms"
        app:layout_constraintTop_toTopOf="@+id/verifyEmailTerms" />

    <Button
        android:id="@+id/verifyIdentificationButton"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/dialog_continue"
        android:theme="@style/ButtonLightBlueTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>